tests/errmsgs/tout_of_bounds_tuple.nim
discard """
  errormsg: "invalid index value (4) for tuple subscript. Tuple has 2 element(s)"
  line: 6
"""

discard (1, 2)[4]